--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
+    "@supabase/supabase-js": "^2.84.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
@@ -21,8 +22,10 @@
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^16.1.0",
     "react-type-animation": "^3.2.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.2"
   },
