--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-syntax-highlighter": "^16.1.0",
     "react-type-animation": "^3.2.0",
     "remark-gfm": "^4.0.1",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.2"
   },
